[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scripts/Entity/Enemies/Enemy0/Enemy0.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/LightBandit.png" type="Texture" id=2]
[ext_resource path="res://Scenes/StateMachine/StateMachine.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0

[sub_resource type="Animation" id=2]
resource_name = "Approach"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 20, 22, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Damage"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Death"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Defend"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=10]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Approach"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Damage"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Defend"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Dying"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Preparation"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=34]
states/Approach/node = SubResource( 12 )
states/Approach/position = Vector2( 509, 61 )
states/Attack/node = SubResource( 13 )
states/Attack/position = Vector2( 332, 135 )
states/Damage/node = SubResource( 14 )
states/Damage/position = Vector2( 332, -14 )
states/Death/node = SubResource( 15 )
states/Death/position = Vector2( 28, -14 )
states/Defend/node = SubResource( 16 )
states/Defend/position = Vector2( 332, 61 )
states/Dying/node = SubResource( 17 )
states/Dying/position = Vector2( 172, -14 )
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( 172, 61 )
states/Preparation/node = SubResource( 19 )
states/Preparation/position = Vector2( 509, 135 )
states/Run/node = SubResource( 20 )
states/Run/position = Vector2( 509, -14 )
transitions = [ "Idle", "Defend", SubResource( 21 ), "Approach", "Preparation", SubResource( 22 ), "Preparation", "Attack", SubResource( 23 ), "Attack", "Defend", SubResource( 24 ), "Run", "Approach", SubResource( 25 ), "Approach", "Defend", SubResource( 26 ), "Damage", "Defend", SubResource( 27 ), "Damage", "Dying", SubResource( 28 ), "Dying", "Death", SubResource( 29 ), "Defend", "Damage", SubResource( 30 ), "Defend", "Run", SubResource( 31 ), "Defend", "Approach", SubResource( 32 ), "Defend", "Idle", SubResource( 33 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( -81.3867, -60.9183 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.12549, 0.490196, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=37]

[sub_resource type="CircleShape2D" id=38]
radius = 50.0

[node name="Enemy0" type="KinematicBody2D" groups=[
"Enemy",
]]
z_index = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
vframes = 5
hframes = 8
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_priority = 1
method_call_mode = 1
anims/Approach = SubResource( 2 )
anims/Attack = SubResource( 3 )
anims/Damage = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Defend = SubResource( 6 )
anims/Dying = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/Preparation = SubResource( 9 )
anims/Recovery = SubResource( 10 )
anims/Run = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 35 )

[node name="Timer" type="Timer" parent="."]

[node name="StateMachine" parent="." instance=ExtResource( 3 )]

[node name="Attack" type="Position2D" parent="."]
position = Vector2( -25, 0 )

[node name="ControlBar" type="Control" parent="."]
margin_left = -12.0
margin_top = -30.0
margin_right = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="ControlBar"]
margin_right = 25.0
margin_bottom = 5.0
custom_styles/fg = SubResource( 36 )
custom_styles/bg = SubResource( 37 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 38 )
